# attendance-automation

./: .coverage  .env.example  .gitignore  Attendance_Automation_System_Report.docx  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  test.db
app/: config.py  main.py  messages.py  slack_verify.py  store.py  timetrack.py
app/api/: attendance.py  celery_health.py  deps.py  employees.py  slack_events.py
app/core/: config.py
app/database/: session.py
app/marsos/: factory.py  provider.py
app/middleware/: security.py  slack_verification.py
app/models/: models.py
app/repositories/: attendance_repository.py  employee_repository.py
app/schemas/: schemas.py  slack_schemas.py
app/services/: attendance_service.py  slack_event_service.py
app/slack/: client.py  event_deduplicator.py  validator.py
app/utils/: security.py  time.py
app/workers/: celery_worker.py
docker/: Dockerfile
docs/: architecture_diagram.d2  architecture_diagram.mmd  audit_and_roadmap_v2.md  deployment.md  developer_guide.md  engineering_audit_and_roadmap.md
migrations/: env.py
migrations/versions/: 55ed361dfe4e_add_attendance_stop_lifecycle.py  a542632a835f_initial_migration.py
scripts/: employees.py  seed_data.py  trigger_automation.py  trigger_logout.py
tests/: conftest.py  factories.py  test_actions.py  test_admin_api.py  test_api.py  test_attendance_service.py  test_attendance_service_end.py  test_attendance_service_failures.py  test_attendance_service_stop.py  test_event_deduplicator.py  test_marsos_factory.py  test_messages.py  test_repositories.py  test_security_and_time.py  test_slack_client.py  test_slack_event_service.py  test_slack_events_api.py  test_slack_validator.py  test_slack_verification.py  test_slack_verify.py  test_store.py  test_timetrack.py  test_webhook.py
