[tool.poetry]
package-mode = false

[project]
name = "attendance-automation"
version = "0.2.0"
description = "Slack messages to TimeTrack attendance"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi~=0.139.0",
    "uvicorn~=0.51.0",
    "httpx~=0.27.0",
    "pydantic-settings~=2.3.3",
    "python-dotenv~=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.4.0",
    "pytest-asyncio~=0.23.7",
    "ruff~=0.4.9",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
